# A2UI

./: pyproject.toml
.github/workflows/: python_ci.yml  triage.yml
agent_sdks/conformance/: pyproject.toml
agent_sdks/python/a2ui_agent/: pyproject.toml
agent_sdks/python/a2ui_core/: pyproject.toml
agent_sdks/python/a2ui_core/scripts/: generate_schemas.py
agent_sdks/python/a2ui_core/src/a2ui/core/: exceptions.py
agent_sdks/python/a2ui_core/tests/: test_generate_schemas.py
eval/: main.py  pyproject.toml  tasks.py
eval/a2ui_eval/: dataset.py  scorers.py
eval/a2ui_eval/shared/: utils.py
eval/a2ui_eval/strategies/: __init__.py  direct.py  express.py  subagent_tool.py
eval/datasets/: defaults.py  v0_9_prompts.yaml
eval/tests/: test_dataset.py  test_run_ci_evals.py  test_scorers.py  test_strategies.py
samples/agent/adk/custom-components-example/: pyproject.toml
samples/agent/adk/restaurant_finder/: pyproject.toml
samples/community/agent/adk/gemini_enterprise/agent_engine/: pyproject.toml
samples/community/agent/adk/gemini_enterprise/cloud_run/: pyproject.toml
samples/community/agent/adk/mcp_app_proxy/: pyproject.toml
samples/community/agent/adk/orchestrator/: pyproject.toml
samples/community/agent/adk/personalized_learning/: pyproject.toml
samples/community/mcp/a2ui-over-mcp-recipe/: pyproject.toml
scripts/: fix_format.sh  triage.mjs
specification/proposals/express/scripts/: recreate_dsl_examples.py  run_compiler.py  run_decompiler.py  run_inference.py  run_prompt_generator.py
(+12 files in other folders)
